<resources>
    <string name="app_name">Queue</string>
    <string name="queue">排队</string>
    <string name="search">查询</string>
    <string name="play">播放</string>
    <string name="please_input_the_number_of_diners">请输入就餐人数</string>
    <string name="please_input_the_number_of_phone">请输入电话号码</string>
    <string name="input_type_num">输入分类名称</string>
    <string name="take_number">取号</string>
    <string name="more_function">更多功能</string>
    <string name="empty_num">就餐人数为空！</string>
    <string name="error_phone">请输入正确的手机号</string>
    <string name="type_manage">分类管理</string>
    <string name="all">所有</string>
    <string name="add">新增</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="person_num">人数</string>
    <string name="name">名称</string>
    <string name="add_type">新增分类</string>
    <string name="edit_type">编辑分类</string>
    <string name="empty_type_name">分类为空</string>
    <string name="empty_type_num">人数范围为空</string>
    <string name="min_greater_max">最大就餐人数大于最小就餐人数，请重新输入</string>
    <string name="delete_success">删除成功</string>
    <string name="please_select_delete_type">请选择要删除的分类</string>
    <string name="take_num_success">取号成功</string>
    <string name="over_number">过号</string>
    <string name="eat">就餐</string>
    <string name="call_number">呼叫</string>
    <string name="no_phone_num">无手机号</string>
    <string name="person">人</string>
    <string name="history">历史</string>
    <string name="set">操作设置</string>
    <string name="clear_order_info">1.清空排队信息</string>
    <string name="friends_msg">温馨提示</string>
    <string name="handle_success">操作成功</string>
    <string name="if_clear_order_info">是否清空取号排队订单信息？</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="please_set_paly_content">请设置播放内容</string>
    <string name="onpause">暂停</string>
</resources>
