<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shape_red"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_type"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/color_000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/bg_edit_gray"
                android:hint="@string/input_type_num"
                android:lines="1"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/person_num"
                android:textColor="@color/color_000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_min_num"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/bg_edit_gray"
                android:lines="1"
                android:inputType="number"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="一"
                android:textColor="@color/color_000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_max_num"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/bg_edit_gray"
                android:lines="1"
                android:inputType="number"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_gray"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_btn_red"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>