<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_take_number"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/search"
                android:drawablePadding="10dp"
                android:padding="25dp"
                android:text="@string/search"
                android:textColor="@color/color_707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_paly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableLeft="@mipmap/paly"
                android:drawablePadding="10dp"
                android:padding="25dp"
                android:text="@string/play"
                android:textColor="@color/color_707070"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_while_gray">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:src="@mipmap/phone" />

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_the_number_of_phone"
                android:lines="1"
                android:layout_gravity="center"
                android:textColor="@color/color_000000"
                android:textColorHint="@color/color_707070"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_num"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_while_gray">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:src="@mipmap/person" />

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/please_input_the_number_of_diners"
                android:lines="1"
                android:textColor="@color/color_000000"
                android:textColorHint="@color/color_707070"
                android:textSize="16sp" />
        </RelativeLayout>

        <include layout="@layout/layout_number"></include>

    </LinearLayout>

    <Button
        android:id="@+id/btn_take_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/tv_more_function"
        android:layout_margin="25dp"
        android:background="@drawable/bg_btn_red"
        android:text="@string/take_number"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_more_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/more"
        android:drawablePadding="10dp"
        android:padding="25dp"
        android:text="@string/more_function"
        android:textColor="@color/color_707070"
        android:textSize="18sp" />
</RelativeLayout>